# arithmetic

./: .gitignore  README.md  pyproject.toml  run.sh
data/: arithmetic_10000ex_1000-10000_2vals_plus.jsonl  arithmetic_10000ex_10000-100000_2vals_plus.jsonl  arithmetic_10000ex_10000-100000_3vals_plus.jsonl  arithmetic_10000ex_10000-100000_4vals_plus.jsonl  arithmetic_10000ex_10000-100000_5vals_plus.jsonl  arithmetic_20000ex_1000-10000_2vals_plus.jsonl  arithmetic_20000ex_10000-100000_2vals_plus.jsonl  arithmetic_20000ex_10000-100000_3vals_plus.jsonl  arithmetic_20000ex_10000-100000_4vals_plus.jsonl  arithmetic_20000ex_10000-100000_5vals_plus.jsonl  arithmetic_50000ex_1000-10000_2vals_plus.jsonl  arithmetic_50000ex_10000-100000_2vals_plus.jsonl  arithmetic_50000ex_10000-100000_3vals_plus.jsonl  arithmetic_50000ex_10000-100000_4vals_plus.jsonl  arithmetic_50000ex_10000-100000_5vals_plus.jsonl
src/arithmetic/: __init__.py  generate.py  get_completions.py
