[project]
name = "arithmetic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "ruff>=0.9.7",
    "strictfire>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
